--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#009EE2</color>
     <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryLight">#FFFFFF</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="ic_launcher_background">#ffffff</color>
 </resources>
