--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#009EE2</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorPrimaryLight">#FFFFFF</color>
+    <color name="colorDisable">#0F0F0F</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
