--- a/app/src/main/res/layout/fragment_home_landscape.xml
+++ b/app/src/main/res/layout/fragment_home_landscape.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scrollbars="none"
     app:layout_constraintBottom_toTopOf="@+id/nav_view"
     android:paddingBottom="56dp"
     tools:context=".ui.home.HomeFragment">
@@ -11,12 +12,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        >
+
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_jadwal_sholat"
-            android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_width="140dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
@@ -47,8 +50,8 @@
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_aktivitas_harian"
-            android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_width="140dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
@@ -79,8 +82,8 @@
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_jadwal_kajian"
-            android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_width="140dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
@@ -111,8 +114,8 @@
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_catatan_kajian"
-            android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_width="140dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
@@ -140,4 +143,4 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</HorizontalScrollView>
