--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="SplashTheme" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/splash_screen_background</item>
-    </style>
+<!--    <style name="SplashTheme" parent="AppTheme">-->
+<!--        <item name="android:windowBackground">@drawable/splash_screen_background</item>-->
+<!--    </style>-->
 
 </resources>
