--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -17,13 +17,20 @@
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment_weather"
             android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.ui.weather.WeatherFragment"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_activity"
+            android:id="@+id/fragment_quran"
+            android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.ui.quran.QuranFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fragment_weather" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_activity_list"
             android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.ui.activity.ActListFragment"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
